Exercise 2 on Lab04 done

--- a/Lab04/index.html
+++ b/Lab04/index.html
@@ -15,8 +15,10 @@
         <p>En este laboratorio aprenderemos a usar JavaScript!</p>
     </header>
     <section>
-        <h1>Ejercicio 1. Tabla con cuadrados y cubos</h1>
+        <h1>Ejercicio 1. Tabla con cuadrados y cubos.</h1>
         <div id="tablaExponentes"></div>
+        <h1>Ejercicio 2. Suma de dos números aleatorios.</h1>
+        <div id="respuestaSuma"></div>
     </section>
     <script src="./index.js"></script>
 </body>
