--- a/Lab04/index.html
+++ b/Lab04/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Para el tipo de letra: -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monomakh&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Para el resaltado del código: -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet"> -->
+    <!-- CSS propio -->
     <link rel="stylesheet" href="./index.css">
     <title>Laboratorio 4</title>
 </head>
@@ -19,6 +23,33 @@
         <div id="tablaExponentes"></div>
         <h1>Ejercicio 2. Suma de dos números aleatorios.</h1>
         <div id="respuestaSuma"></div>
+        <h1>Ejercicio 3. Función contador.</h1>
+        <p>El código generado para contar los número negativos, ceros y número positivos es el siguiente:</p>
+        <pre>
+            <code class="language-js">
+                function contador(numbers) {
+                    let texto = "En el arreglo existen: \n";
+                    let totalNegatives = 0;
+                    let totalZeros = 0;
+                    let totalGreaterThanZero  = 0;
+                    for (let i = 0; i<numero.length;i++){
+                        if (numbers[i] < 0) {
+                            totalNegatives += 1;
+                        } if (numbers[i] == 0) {
+                            totalZeros += 1;
+                        } if (numbers[i] > 0) {
+                            totalGreaterThanZero += 1;
+                        }
+                    }
+                    texto += totalNegatives + " negativos.\n";
+                    texto += totalZeros + " iguales a cero.\n";
+                    texto += totalGreaterThanZero + " mayores a cero."
+                    return texto;
+                }
+            </code>
+        </pre>
+        <p>Ahora vamos a probar la lista con una lista generada aleatoriamente.</p>
+        <div id="listaAleatoria"></div>
     </section>
     <script src="./index.js"></script>
 </body>
