--- a/Lab04/index.html
+++ b/Lab04/index.html
@@ -67,6 +67,32 @@
         <h1>Ejercicio 5. Función inversa.</h1>
         <p>Probando con un número aleatorio:</p>
         <div id="inversa"></div>
+        <h1>Ejercicio 6. Convertidor de Fahrenheit-Celsius</h1>
+        <p>Como problema, he decidio hacer un convertidor de temperatura
+            de Celsius a Fahrenheit y viseversa.
+        </p>
+        <input type="number" id="temperatura" placeholder="Ingresa tu temperatura">
+        <button onclick="convertirCelsiusFahrenheit()">Convertir Fahrenheit a Celsius</button>
+        <button onclick="convertirFahrenheitCelsius()">Convertir Celsius a fahrenheit</button>
+        <div id="resultadoTemperatura"></div>
+    </section>
+    <section>
+        <h1>Preguntas</h1>
+        <h2>¿Qué diferencias y semejanzas hay entre Java y JavaScript</h2>
+        <p>En realidad, Java y JavaScript actualmente son muy diferntes entre sí.
+            En los inicios de JavaScript pudiese ser que existien cosas similares entre sí
+            pero, actualmente, fuera de que en su sintaxis ambos usan llaves y puntos y comas y que los dos son
+            lenguajes orientado a objetos, no existe mayor semejanza.
+        </p>
+        <p>
+            Principalmente, podemos ver sus diferencias en sus propositos, pues Java
+            esta 100% enfocado en la programación orientada a objetos, mientras que, si bien
+            JavaScript también lo es, en realidad es multiparadigma. Además, en su ejecución de Java
+            se utiliza la Java Virtual Machine para ejecutrase, mientras que JavaScript se puede ejecutra
+            dentro de cualquier navegador. El tipado de Java es más fuerte que el de JavaScript. En resumen
+            existen muchisimas diferencias entre Java y JavaScript.
+        </p>
+        <h2>¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</h2>
     </section>
     <script src="./index.js"></script>
 </body>
