--- a/Lab05/index.html
+++ b/Lab05/index.html
@@ -9,23 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Monomakh&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- CSS propio -->
     <link rel="stylesheet" href="./index.css">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Laboratorio 4</title>
 </head>
 <body>
-    <header class="bg-primary text-white text-center p-4">
+    <header class="h1 bg-primary text-white text-center p-4">
         <h1>Laboratorio 5 - Utilizando Bootstrap</h1>
         <p class="lead">Este laboratorio tiene cómo objetivo únicamente mostrar el estilo que se le puede dar al
             laboratorio anterior pero utilizando bootstrap.
         </p>
     </header>
     <section class="container-sm">
-        <h1 class="text-primary">Ejercicio 1. Tabla con cuadrados y cubos.</h1>
+        <h1 class="h1">Ejercicio 1. Tabla con cuadrados y cubos.</h1>
         <div id="tablaExponentes"></div>
-        <h1 class="text-primary">Ejercicio 2. Suma de dos números aleatorios.</h1>
+        <h1 class="h1">Ejercicio 2. Suma de dos números aleatorios.</h1>
         <div id="respuestaSuma" class="alert alert-info"></div>
-        <h1 class="text-primary">Ejercicio 3. Función contador.</h1>
-        <p>El código generado para contar los número negativos, ceros y número positivos es el siguiente:</p>
+        <h1 class="h1">Ejercicio 3. Función contador.</h1>
+        <p class="lead">El código generado para contar los número negativos, ceros y número positivos es el siguiente:</p>
         <pre>
             <code>
                 function contador(numbers) {
@@ -49,10 +50,10 @@
                 }
             </code>
         </pre>
-        <p>Ahora vamos a probar la lista con una lista generada aleatoriamente.</p>
+        <p class="lead">Ahora vamos a probar la lista con una lista generada aleatoriamente.</p>
         <div id="listaAleatoria"></div>
-        <h1 class="text-primary">Ejercicio 4. Funcion de promedio.</h1>
-        <p>El código realizado para la función de promedio es el siguiente:</p>
+        <h1 class="h1">Ejercicio 4. Funcion de promedio.</h1>
+        <p class="lead">El código realizado para la función de promedio es el siguiente:</p>
         <pre>
             <code>
                 function promedios(numeros){
@@ -65,13 +66,13 @@
                 }
             </code>
         </pre>
-        <p>Nuevamente, lo probaremos con un arreglo aletrorio:</p>
+        <p class="lead">Nuevamente, lo probaremos con un arreglo aletrorio:</p>
         <div id="proemdioAletorio"></div>
-        <h1 class="text-primary">Ejercicio 5. Función inversa.</h1>
-        <p>Probando con un número aleatorio:</p>
+        <h1 class="h1">Ejercicio 5. Función inversa.</h1>
+        <p class="lead">Probando con un número aleatorio:</p>
         <div id="inversa"></div>
-        <h1 class="text-primary">Ejercicio 6. Convertidor de Fahrenheit-Celsius</h1>
-        <p>Como problema, he decidio hacer un convertidor de temperatura
+        <h1 class="h1">Ejercicio 6. Convertidor de Fahrenheit-Celsius</h1>
+        <p class="lead">Como problema, he decidio hacer un convertidor de temperatura
             de Celsius a Fahrenheit y viseversa.
         </p>
         <input type="number" id="temperatura" placeholder="Ingresa tu temperatura">
@@ -80,14 +81,14 @@
         <div id="resultadoTemperatura"></div>
     </section>
     <section class="container-sm">
-        <h1 class="text-primary">Preguntas</h1>
-        <h2 class="text-secondary">¿Qué diferencias y semejanzas hay entre Java y JavaScript</h2>
-        <p>En realidad, Java y JavaScript actualmente son muy diferntes entre sí.
+        <h1 class="h1">Preguntas</h1>
+        <h2 class="h2">¿Qué diferencias y semejanzas hay entre Java y JavaScript</h2>
+        <p class="lead">En realidad, Java y JavaScript actualmente son muy diferntes entre sí.
             En los inicios de JavaScript pudiese ser que existien cosas similares entre sí
             pero, actualmente, fuera de que en su sintaxis ambos usan llaves y puntos y comas y que los dos son
             lenguajes orientado a objetos, no existe mayor semejanza.
         </p>
-        <p>
+        <p class="lead">
             Principalmente, podemos ver sus diferencias en sus propositos, pues Java
             esta 100% enfocado en la programación orientada a objetos, mientras que, si bien
             JavaScript también lo es, en realidad es multiparadigma. Además, en su ejecución de Java
@@ -95,16 +96,16 @@
             dentro de cualquier navegador. El tipado de Java es más fuerte que el de JavaScript. En resumen
             existen muchisimas diferencias entre Java y JavaScript.
         </p>
-        <h2 class="text-secondary">¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</h2>
-        <p>Principalmente podríamos divirlos entre dos grandes componentes, <em>get</em> y <em>set</em>,
+        <h2 class="h2">¿Qué métodos tiene el objeto Date? (Menciona al menos 5*)</h2>
+        <p class="lead">Principalmente podríamos divirlos entre dos grandes componentes, <em>get</em> y <em>set</em>,
             además de que existe cada uno para Local y para UTC. Como ejemplos, tenemos 
             <code>getFullYear()</code> y <code>getUTCFullYear()</code>.
         </p>
-        <p>
+        <p class="lead">
             <code>getFullYear()</code> regresa el año de una fecha de acuerdo al tiempo local,
             mientras que <code>getUTCFullYear()</code> lo regresa de acuerdo al tiempo universal.
         </p>
-        <p>Así pues, como ejemplo podríamos tener los siguientes métodos:</p>
+        <p class="lead">Así pues, como ejemplo podríamos tener los siguientes métodos:</p>
         <ul>
             <li><code>getMonth()</code>: regresa el mes de una fecha, como un valor.</li>
             <li><code>getDate()</code>: regresa el día del mes (número).</li>
@@ -114,8 +115,8 @@
         </ul>
         En general, existe un método para cada momento de una fecha (hasta milisegundos) y
         esta se puede ajustar al tiempo local o al tiempo UTC. Además de que se puede modificar con set.
-        <h2 class="text-secondary">¿Qué métodos tienen los arreglos? (Menciona al menos 5*)</h2>
-        <p>Los arreglos tiene principalmente los siguientes métodos:</p>
+        <h2 class="h2">¿Qué métodos tienen los arreglos? (Menciona al menos 5*)</h2>
+        <p class="lead">Los arreglos tiene principalmente los siguientes métodos:</p>
         <ul>
             <li><code>.push(elemento)</code>: nos sirve para añadir un elemento al final del arreglo.</li>
             <li><code>.pop()</code>: elimina el último elemento del arreglo y lo regresa.</li>
@@ -123,8 +124,8 @@
             <li><code>.unshift(elemento)</code>: agrega un elemento al inicio del arreglo.</li>
             <li><code>.map(funcion)</code>: crea un nuevo arreglo aplicandole una función a cada elemento.</li>
         </ul>
-        <h2 class="text-secondary">¿Cómo se declara una variable con alcance local dentro de una función?</h2>
-        <p>Se declara dentro de la función con <code>let</code> o con <code>const</code>, por ejemplo:</p>
+        <h2 class="h2">¿Cómo se declara una variable con alcance local dentro de una función?</h2>
+        <p class="lead">Se declara dentro de la función con <code>let</code> o con <code>const</code>, por ejemplo:</p>
         <pre>
             <code>
                 function miFuncion(){
@@ -134,8 +135,8 @@
                 }
             </code>
         </pre>
-        <h2 class="text-secondary">¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</h2>
-        <p>Como ventaja, podemos utilizar esta variable dentro de cualquier función.
+        <h2 class="h2">¿Qué implicaciones tiene utilizar variables globales dentro de funciones?</h2>
+        <p class="lead">Como ventaja, podemos utilizar esta variable dentro de cualquier función.
             Por ejemplo, si quicieramos definir por nuestra cuenta el valor de π. Sin embargo
             si en algún punto de nuestra función cambiamos el valor de la variable, esta se 
             verá afectada por lo que nos podría costar trabajo saber cual es el valor real de 
