Lab10: redoing POST

--- a/Lab10+/NotFound.html
+++ b/Lab10+/NotFound.html
@@ -8,13 +8,8 @@
 </head>
 <body class="container is-max-desktop">
     <section>
-        <h1 class="title is-1">Laboratorio 10</h1>
-        <p class="is-size-4">Para este Laboratorio, lo redigiré a otros laboratorios trabajados.</p>
-        <form class="field" action="/laboratorios" method="POST">
-            <input type="submit" class="button is-info" name="Lab03" id="Lab03" value="Ir a Lab03">
-        </form>
+        <h1 class="title is-1">Error 404</h1>
+        <p class="is-size-4">No existe tal página :(</p>
     </section>
-    <footer>
-    </footer>
 </body>
 </html>
