Lab10: Done loading htmls on labs, resolving content (js,css,imgs) problems.

--- a/Lab10+/index.html
+++ b/Lab10+/index.html
@@ -10,8 +10,15 @@
     <section>
         <h1 class="title is-1">Laboratorio 10</h1>
         <p class="is-size-4">Para este Laboratorio, lo redigiré a otros laboratorios trabajados.</p>
-        <form class="field" action="/laboratorios" method="POST">
+        <label for="seleccionLab" class="label">Selecciona un laboratorio: </label>
+        <form class="field" action="/laboratorios/Lab03" method="POST">
             <input type="submit" class="button is-info" name="Lab03" id="Lab03" value="Ir a Lab03">
+        </form>
+        <form class="field" action="/laboratorios/Lab05" method="POST">
+            <input type="submit" class="button is-info" name="Lab05" id="Lab05" value="Ir a Lab03">
+        </form>
+        <form class="field" action="/laboratorios/Lab06" method="POST">
+            <input type="submit" class="button is-info" name="Lab06" id="Lab06" value="Ir a Lab03">
         </form>
     </section>
     <footer>
