Lab11: Saving progrees

--- a/routes/html/Github.html
+++ b/routes/html/Github.html
@@ -9,8 +9,8 @@
 <body class="container is-max-desktop">
     <section class="">
         <h1 class="title is-1">Mi Github</h1>
-        <p><a href="https://github.com/TheSimpleMau"></a>Da click para ver mis repos!</p>
-        <p>
+        <p><a href="https://github.com/TheSimpleMau">Da click aquí para ver mi repositorio!</a></p><br>
+        <p class="is-size-5">
             Ahí podrás encontrar repositorios cómo <a href="https://github.com/TheSimpleMau/SimpleGrapher">SimpleGrapher</a>.
             En este proyecto, creé una pequeña aplicación en python que tiene la intención de ser, de forma introductoria,
             una pequeña demostración de cómo es que se puede ver una gráfica hecha con python.
