--- a/routes/html/SobreMi.html
+++ b/routes/html/SobreMi.html
@@ -9,7 +9,7 @@
 <body class="container is-max-desktop">
     <section class="">
         <h1 class="title is-1">Sobre mi</h1>
-        <p>Me llamo mau jsjsjs</p>
+        <p class="is-size-5">Me llamo mau jsjsjs</p>
     </section>
 </body>
 </html>
