--- a/routes/html/SobreMi.html
+++ b/routes/html/SobreMi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,28 @@
     <title>Sobre Mi</title>
 </head>
 <body class="container is-max-desktop">
-    <section class="">
+    <section class="section">
         <h1 class="title is-1">Sobre mi</h1>
         <p class="is-size-5">Me llamo mau jsjsjs</p>
+    </section class="section">
+    <section class="section">
+        <h1 class="title is-1">¿Quieres saber algo de mi?</h1>
+        <p class="is-size-5">¡Déjame tu pregunta!</p>
+        <div class="box">
+            <form action="/sobreMi/guardar" method="POST">
+                <div class="field">
+                    <label class="label" for="pregunta">Escribe algo sobre mí:</label>
+                    <div class="control">
+                        <input class="input" type="text" id="pregunta" name="pregunta" placeholder="¿Cuanto mides?">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <button class="button is-primary" type="submit">Enviar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </section>
 </body>
 </html>
