Lab11: almost finish! adding more routes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                 <a href="/sobreMi" id="sobreMi" class="navbar-item is-hoverable">Sobre mí</a>
                 <a href="/miGithub" id="miGithub" class="navbar-item is-hoverable">Mi GitHub</a>
                 <a href="/datosCuriosos" id="datosCuriosos" class="navbar-item is-hoverable">Datos curiosos</a>
+                <a href="/pasatiempos" id="pasatiempos" class="navbar-item is-hoverable">Pasatiempos</a>
+                <a href="/contacto" id="contacto" class="navbar-item is-hoverable">Contacto</a>
             </div>
         </div>
     </nav>
@@ -22,17 +24,22 @@
     </div>
     <div class="content">
         <h1 class="title is-1">¿Qué es esto?</h1>
-        <p class="is-size-5">Si quieres saber lo básico de mi, visita la pestaña de <a href="sobreMi">Sobre mi</a>.</p>
-        <p class="is-size-5">En cambio, si quieres saber los trabajos que he realizado en GitHub, visita la pestaña de <a href="miGithub">Mi Github</a>.</p>
         <p class="is-size-5">
-            Por último, visita la página de <a href="datosCuriosos">Datos curiosos</a> para saber datos curiosos que probablemente diría si es que nos
+            Si quieres saber lo básico de mi, visita la pestaña de <a href="sobreMi">Sobre mi</a>.
+        </p>
+        <p class="is-size-5">
+            En cambio, si quieres saber los trabajos que he realizado en GitHub, visita la pestaña de <a href="miGithub">Mi Github</a>.
+        </p>
+        <p class="is-size-5">
+            Visita la página de <a href="datosCuriosos">Datos curiosos</a> para saber datos curiosos que probablemente diría si es que nos
             encontraramos alguna vez.
         </p>
+        <p class="is-size-5">
+            ¿Quieres saber cuales son mis pasatiempos? ¡visita la página de <a href="pasatiempos">pasatiempos</a> para saberlos!
+        </p>
+        <p class="is-size-5">
+            Por útltimo, si hablar conmigo, visita mi página de <a href="contacto">contacto</a>.
+        </p>
     </div>
-    <footer>
-        <h1 class="title is-1">¡Contactame!</h1>
-        <p class="is-size-5">✉️  Mi correo: <a href="mailto:A01711522@tec.mx">A01711522@tec.mx</a></p>
-        <p class="is-size-5">📞 Mi número: <a href="tel:+524425669698">+524425669698</a></p>
-    </footer>
 </body>
 </html>
