Lab11: Terminado - añadiendo pregunta final

--- a/index.html
+++ b/index.html
@@ -41,5 +41,17 @@
             Por útltimo, si hablar conmigo, visita mi página de <a href="contacto">contacto</a>.
         </p>
     </div>
+    <div class="content">
+        <h1 class="title is-1">Preguntas</h1>
+        <h2 class="title is-2">
+            ¿De qué va el archivo package.json?
+        </h2>
+        <p class="is-size-5">
+            El archivo package.json basicamente describe todos los paquetes
+            que son necesarios para el correcto funcionamiento de nuestro servidor.
+            Este archivo también se encarga princiaplmente de gestionar y definir las
+            las caracterísitcas de un proyecto desarrollado en Node.js.
+        </p>
+    </div>
 </body>
 </html>
